--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,32 @@
   font-size: 14px;
   background: rgba(255, 255, 255, 1);
 }
+
+.landPage {
+  /*margin-top: fill;*/
+  /*text-align: center;*/
+  /*font-size: 50px;*/
+  /*background: gold;*/
+  margin: auto;
+
+  text-align: center;
+  width: 50%;
+  border: 3px solid gold;
+  padding: 10px;
+}
+
+.submit-button {
+  display: inline-block;
+  border-radius: 4px;
+  background-color: gold;
+  border: none;
+  color: black;
+  text-align: center;
+  font-size: 28px;
+  padding: 20px;
+  width: 25%;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 10px;
+}
+
