--- a/src/LoginForm.css
+++ b/src/LoginForm.css
@@ -10,6 +10,25 @@ body{
     text-align: center;
     font-size: xx-large;
 }
+
+.loginForm {
+    margin: auto;
+    margin-top: 100px;
+    box-sizing: border-box;
+    justify-content: center;
+    max-width: 40%;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.login-label {
+    padding-bottom: 10px;
+    width: 100%;
+    font-size: 20px;
+    border-bottom: 2px solid #1189de;
+    margin-bottom: 20px;
+}
+
 .no-margin {
     margin: 0px;
 }
@@ -61,4 +80,8 @@ body{
 .login-button:hover span:after {
     opacity: 1;
     right: 0;
+}
+
+.login-swap {
+    text-align: center;
 }
