--- a/src/App.css
+++ b/src/App.css
@@ -50,9 +50,34 @@
   text-align: center;
   font-size: 28px;
   padding: 20px;
-  width: 25%;
+  width: 100%;
   transition: all 0.5s;
   cursor: pointer;
   margin: 10px;
+}
+
+.submit-button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.submit-button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.submit-button:hover span {
+  padding-right: 25px;
+}
+
+.submit-button:hover span:after {
+  opacity: 1;
+  right: 0;
 }
 
