--- a/src/Category/modal.css
+++ b/src/Category/modal.css
@@ -9,12 +9,14 @@
 
 .modal-main {
     position:fixed;
+    text-align: left;
     background: white;
     width: 80%;
     height: auto;
     top:50%;
     left:50%;
     transform: translate(-50%,-50%);
+    border-radius: 30px;
 }
 
 .display-block {
