--- a/src/css/App.css
+++ b/src/css/App.css
@@ -8,77 +8,235 @@
   /*background-color: #202124;*/
 }
 
-.nav-bar {
-  display: flex;
-  height: 100px;
-  align-items: center;
+
+
+@media screen and (min-width: 1200px){
+  .nav-bar {
+    display: flex;
+    height: 100px;
+    align-items: center;
+  }
+
+  .inputField {
+    padding-top: 16px;
+  }
+
+  .input {
+    outline: none;
+    border: solid 2px #1189de;
+    margin-bottom: 10px;
+    color: #292929;
+    width: 100%;
+    padding: 12px;
+    font-size: 14px;
+    background: rgba(255, 255, 255, 1);
+  }
+
+  .landPage {
+    /*margin-top: fill;*/
+    /*text-align: center;*/
+    /*font-size: 50px;*/
+    /*background: gold;*/
+    margin: auto;
+
+    text-align: center;
+    width: 50%;
+    border: 3px solid gold;
+    padding: 10px;
+  }
+
+  .submit-button {
+    display: inline-block;
+    border-radius: 4px;
+    background-color: gold;
+    border: none;
+    color: black;
+    text-align: center;
+    font-size: 28px;
+    padding: 20px;
+    width: 100%;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 10px;
+  }
+
+  .submit-button span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+
+  .submit-button span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+  }
+
+  .submit-button:hover span {
+    padding-right: 25px;
+  }
+
+  .submit-button:hover span:after {
+    opacity: 1;
+    right: 0;
+  }
 }
 
-.inputField {
-  padding-top: 16px;
+
+@media screen and (max-width: 1200px){
+  .nav-bar {
+    display: flex;
+    height: 100px;
+    font-size: smaller;
+    align-items: center;
+  }
+
+  .inputField {
+    padding-top: 16px;
+  }
+
+  .input {
+    outline: none;
+    border: solid 2px #1189de;
+    margin-bottom: 10px;
+    color: #292929;
+    width: 100%;
+    padding: 12px;
+    font-size: 14px;
+    background: rgba(255, 255, 255, 1);
+  }
+
+  .landPage {
+    /*margin-top: fill;*/
+    /*text-align: center;*/
+    /*font-size: 50px;*/
+    /*background: gold;*/
+    margin: auto;
+
+    text-align: center;
+    width: 50%;
+    border: 3px solid gold;
+    padding: 10px;
+  }
+
+  .submit-button {
+    display: inline-block;
+    border-radius: 4px;
+    background-color: gold;
+    border: none;
+    color: black;
+    text-align: center;
+    font-size: 28px;
+    padding: 20px;
+    width: 100%;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 10px;
+  }
+
+  .submit-button span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+
+  .submit-button span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+  }
+
+  .submit-button:hover span {
+    padding-right: 25px;
+  }
+
+  .submit-button:hover span:after {
+    opacity: 1;
+    right: 0;
+  }
 }
 
-.input {
-  outline: none;
-  border: solid 2px #1189de;
-  margin-bottom: 10px;
-  color: #292929;
-  width: 100%;
-  padding: 12px;
-  font-size: 14px;
-  background: rgba(255, 255, 255, 1);
-}
+@media screen and (max-width: 900px){
+  .nav-bar {
+    display: flex;
+    height: 50px;
+    align-items: center;
+  }
 
-.landPage {
-  /*margin-top: fill;*/
-  /*text-align: center;*/
-  /*font-size: 50px;*/
-  /*background: gold;*/
-  margin: auto;
+  .inputField {
+    padding-top: 16px;
+  }
 
-  text-align: center;
-  width: 50%;
-  border: 3px solid gold;
-  padding: 10px;
-}
+  .input {
+    outline: none;
+    border: solid 2px #1189de;
+    margin-bottom: 10px;
+    color: #292929;
+    width: 100%;
+    padding: 12px;
+    font-size: 14px;
+    background: rgba(255, 255, 255, 1);
+  }
 
-.submit-button {
-  display: inline-block;
-  border-radius: 4px;
-  background-color: gold;
-  border: none;
-  color: black;
-  text-align: center;
-  font-size: 28px;
-  padding: 20px;
-  width: 100%;
-  transition: all 0.5s;
-  cursor: pointer;
-  margin: 10px;
-}
+  .landPage {
+    /*margin-top: fill;*/
+    /*text-align: center;*/
+    /*font-size: 50px;*/
+    /*background: gold;*/
+    margin: auto;
 
-.submit-button span {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  transition: 0.5s;
-}
+    text-align: center;
+    width: 50%;
+    border: 3px solid gold;
+    padding: 10px;
+  }
 
-.submit-button span:after {
-  content: '\00bb';
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  right: -20px;
-  transition: 0.5s;
-}
+  .submit-button {
+    display: inline-block;
+    border-radius: 4px;
+    background-color: gold;
+    border: none;
+    color: black;
+    text-align: center;
+    font-size: 28px;
+    padding: 20px;
+    width: 100%;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 10px;
+  }
 
-.submit-button:hover span {
-  padding-right: 25px;
-}
+  .submit-button span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
 
-.submit-button:hover span:after {
-  opacity: 1;
-  right: 0;
+  .submit-button span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+  }
+
+  .submit-button:hover span {
+    padding-right: 25px;
+  }
+
+  .submit-button:hover span:after {
+    opacity: 1;
+    right: 0;
+  }
 }
 
