--- a/src/css/messages.css
+++ b/src/css/messages.css
@@ -3,6 +3,49 @@
     border-style: solid;
     border-width: 1px;
     border-color: rgba(105,85,85,0.45);
-    height: 300px;
+    height: 500px;
     overflow-y: scroll;
+    width: 50%;
+}
+
+.own-message {
+    text-align: right;
+    display: flex;
+    flex-direction: column;
+    margin-left: 50%;
+    border-style: solid;
+    border-color: #bdbbbb;
+    background-color: rgb(242, 242, 242);
+    border-radius: 10px;
+    margin-bottom: 5px;
+}
+
+.received-message {
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    margin-right: 50%;
+    border-style: solid;
+    border-color: #bdbbbb;
+    background-color: rgb(242, 242, 242);
+    border-radius: 10px;
+    margin-bottom: 5px;
+}
+
+.parentMessages {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media all and (max-height: 800px){
+    .messages-list {
+        margin: 20px;
+        border-style: solid;
+        border-width: 1px;
+        border-color: rgba(105,85,85,0.45);
+        height: 300px;
+        overflow-y: scroll;
+        width: 60%;
+    }
 }
